adjusted link text to become 'Github Project' and added CSS media query to prevent misalignment at small screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,14 @@
     src: url('../fonts/caudex-v17-latin-700italic.woff2') format('woff2'); 
 }
 
+
+@media screen and (max-width: 480px) {
+    .flexbox.cell {
+        margin: 0;
+        padding: 0;
+    }
+} 
+
 [data-theme="light"] {
     --bgcolor:rgb(255, 255, 255);
     --fgcolor: rgb(0,0,0);
